# design_pattern_cpp

./: CMakeLists.txt
include/example/: A.hpp
include/reflection/: classfactory.hpp  classfield.hpp  classmethod.hpp  classregister.hpp
include/utility/: singleton.hpp
src/example/: A.cpp
src/reflection/: classfactory.cpp  classfield.cpp  classmethod.cpp  classregister.cpp
test/: testA.cpp
